--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "devDependencies": {
         "eslint": "^4.15.0",
         "eslint-config-airbnb": "^16.1.0",
+        "eslint-plugin-import": "^2.13.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
         "mocha": "^4.0.1",
         "should": "^11.2.1"
     },
